// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`It should match the mediaBreakpointBetween snapshot 1`] = `
.c0 {
  padding: 4em;
  background: papayawhip;
}

@media (min-width:100px) and (max-width:199px) {
  .c1 {
    color: blue;
  }
}

<section
  className="c0"
>
  <h1
    className="c1"
  >
    Hello World!
  </h1>
</section>
`;

exports[`It should match the mediaBreakpointDowSm snapshot 1`] = `
.c0 {
  padding: 4em;
  background: papayawhip;
}

@media (max-width:767px) {
  .c1 {
    color: blue;
  }
}

<section
  className="c0"
>
  <h1
    className="c1"
  >
    Hello World!
  </h1>
</section>
`;

exports[`It should match the mediaBreakpointDownLg snapshot 1`] = `
.c0 {
  padding: 4em;
  background: papayawhip;
}

@media (max-width:1199px) {
  .c1 {
    color: blue;
  }
}

<section
  className="c0"
>
  <h1
    className="c1"
  >
    Hello World!
  </h1>
</section>
`;

exports[`It should match the mediaBreakpointDownMd snapshot 1`] = `
.c0 {
  padding: 4em;
  background: papayawhip;
}

@media (max-width:991px) {
  .c1 {
    color: blue;
  }
}

<section
  className="c0"
>
  <h1
    className="c1"
  >
    Hello World!
  </h1>
</section>
`;

exports[`It should match the mediaBreakpointDownXs snapshot 1`] = `
.c0 {
  padding: 4em;
  background: papayawhip;
}

@media (max-width:575px) {
  .c1 {
    color: blue;
  }
}

<section
  className="c0"
>
  <h1
    className="c1"
  >
    Hello World!
  </h1>
</section>
`;

exports[`It should match the mediaBreakpointOnlyLg snapshot 1`] = `
.c0 {
  padding: 4em;
  background: papayawhip;
}

@media (min-width:992px) and (max-width:1199px) {
  .c1 {
    color: blue;
  }
}

<section
  className="c0"
>
  <h1
    className="c1"
  >
    Hello World!
  </h1>
</section>
`;

exports[`It should match the mediaBreakpointOnlyMd snapshot 1`] = `
.c0 {
  padding: 4em;
  background: papayawhip;
}

@media (min-width:768px) and (max-width:991px) {
  .c1 {
    color: blue;
  }
}

<section
  className="c0"
>
  <h1
    className="c1"
  >
    Hello World!
  </h1>
</section>
`;

exports[`It should match the mediaBreakpointOnlySm snapshot 1`] = `
.c0 {
  padding: 4em;
  background: papayawhip;
}

@media (min-width:576px) and (max-width:767px) {
  .c1 {
    color: blue;
  }
}

<section
  className="c0"
>
  <h1
    className="c1"
  >
    Hello World!
  </h1>
</section>
`;

exports[`It should match the mediaBreakpointOnlyXl snapshot 1`] = `
.c0 {
  padding: 4em;
  background: papayawhip;
}

@media (min-width:1200px) {
  .c1 {
    color: blue;
  }
}

<section
  className="c0"
>
  <h1
    className="c1"
  >
    Hello World!
  </h1>
</section>
`;

exports[`It should match the mediaBreakpointOnlyXs snapshot 1`] = `
.c0 {
  padding: 4em;
  background: papayawhip;
}

@media (max-width:575px) {
  .c1 {
    color: blue;
  }
}

<section
  className="c0"
>
  <h1
    className="c1"
  >
    Hello World!
  </h1>
</section>
`;

exports[`It should match the mediaBreakpointUpLg snapshot 1`] = `
.c0 {
  padding: 4em;
  background: papayawhip;
}

@media (min-width:992px) {
  .c1 {
    color: blue;
  }
}

<section
  className="c0"
>
  <h1
    className="c1"
  >
    Hello World!
  </h1>
</section>
`;

exports[`It should match the mediaBreakpointUpMd snapshot 1`] = `
.c0 {
  padding: 4em;
  background: papayawhip;
}

@media (min-width:768px) {
  .c1 {
    color: blue;
  }
}

<section
  className="c0"
>
  <h1
    className="c1"
  >
    Hello World!
  </h1>
</section>
`;

exports[`It should match the mediaBreakpointUpSm snapshot 1`] = `
.c0 {
  padding: 4em;
  background: papayawhip;
}

@media (min-width:576px) {
  .c1 {
    color: blue;
  }
}

<section
  className="c0"
>
  <h1
    className="c1"
  >
    Hello World!
  </h1>
</section>
`;

exports[`It should match the mediaBreakpointUpXl snapshot 1`] = `
.c0 {
  padding: 4em;
  background: papayawhip;
}

@media (min-width:1200px) {
  .c1 {
    color: blue;
  }
}

<section
  className="c0"
>
  <h1
    className="c1"
  >
    Hello World!
  </h1>
</section>
`;
